# bounded-zipf

./: README.md  pyproject.toml
bounded_zipf/: __init__.py  zipf.py
